--- a/task_manager/package.json
+++ b/task_manager/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.6",
     "redux": "^5.0.1",
     "sonner": "^1.4.41"
